--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -18,3 +18,9 @@ other = "Categories"
 
 [tags]
 other = "Tags"
+
+[loggedAs]
+other = "You're logged in as"
+
+[404Page]
+other = "Just kidding. This page does not exist (404)."
